[package]
name = "wei-forward"
version = "0.1.0"
edition = "2021"
description = "wei forward"
documentation = "https://github.com/zuiyue-com/wei-forward"
homepage = "https://github.com/zuiyue-com/wei-forward"
license = "MIT OR Apache-2.0"

[dependencies]
wei-run = "0.2.5"
wei-env = "0.2.12"
wei-log = "0.2.5"
serde_json = "1"
ureq = "2.8.0"
toml = "0.8.2"

# reqwest = { version = "0.11", features = ["blocking"] }
# single-instance = "0.3"